test/force-app/main/default/objects/TestData__c/TestData__c.object-meta.xml
<CustomObject>
    <label>TestData</label>
    <nameField>
        <label>TestData Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestDatas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>