test/force-app/main/default/objects/TestData__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hyd</fullName>
            </value>
            <value>
                <fullName>Ban</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>New Delhi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>