test/force-app/main/default/objects/TestData__c/fields/TestId__c.field-meta.xml
<CustomField>
    <fullName>TestId__c</fullName>
    <displayFormat>T{0000}</displayFormat>
    <label>TestId</label>
    <type>AutoNumber</type>
</CustomField>