test/force-app/main/default/objects/TestData__c/fields/TestName__c.field-meta.xml
<CustomField>
    <fullName>TestName__c</fullName>
    <label>TestName</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>